--- a/index.html
+++ b/index.html
@@ -92,17 +92,16 @@
               Let me give you a brief about my programming experience. So, I
               have been programming for more than two years now. High school
               years, where we wrote some simple Pascal code, are not included. I
-              am Final year of bachelor's studies at Faculty of information
-              technologies based in Mostar. Worked on many school assignments
-              and side projects.
+              am currently in my final year of bachelor's studies at Faculty of information
+              technologies - <a style="text-decoration: underline;" href="https://www.fit.ba">FIT Mostar</a>.
               <br />
               <br />
               <strong
-                >Checkout my CV, skills section or Github projects.</strong
+                >Check out my CV, skills section or Github projects.</strong
               >
               <br />
               <br />
-              <strong>Open for job offers or internships</strong>
+              <strong>Open for <span style="color: #67c5ff;">job offers</span> or <span style="color: #67c5ff;">internships</span></strong>
             </p>
           </div>
         </main>
@@ -193,7 +192,7 @@
         <div class="contact-input">
           <form
             method="GET"
-            action="mailto:atif.delibasic@edu.fit.ba"
+            action="mailto:atif.delibasic@edu.fit.ba?"
             class="contact-form"
           >
             <h2>Send Me A Message</h2>
