--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
         </div>
       </header>
 
-      <!-- <div class="overlay" style="display: none;"></div> -->
-
       <div class="container container-flex">
         <div class="section-avatar">
-          <div class="img-avatar background"></div>
+          <div class="img-avatar background avatar-1"></div>
         </div>
+        <span style="font-size:1em;">Tap the avatar!</span>
         <div class="main-header">
           <h1 class="header-title">Junior Software Developer</h1>
           <p class="header-description">
