--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <div class="img-avatar background avatar-1"></div>
         </div>
         <span style="font-size:1em;">Tap the avatar!</span>
+        <!-- <div class="slidecontainer">
+          <input type="range" min="1" max="255" value="50" class="slider" id="myRange">
+        </div> -->
         <div class="main-header">
           <h1 class="header-title">Junior Software Developer</h1>
           <p class="header-description">
@@ -69,7 +72,7 @@
           ></a>
         </div>
         <div class="cv-section">
-          <a target="_blank" href="./Curiculum Vitae//Atif Delibašić - CV.pdf"
+          <a target="_blank" href="./Curiculum Vitae/Atif_Delibašić_CV.pdf"
             ><input class="cv-btn btn" type="button" value="Open CV"
           /></a>
         </div>
