added project section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul class="menu" id="menuId">
               <li class="menu-item"><a href="#home">Home</a></li>
               <li class="menu-item"><a href="#about">About</a></li>
+              <li class="menu-item"><a href="#projects">Projects</a></li>
               <li class="menu-item"><a href="#skills">Skills</a></li>
               <li class="menu-item"><a href="#contact">Contact</a></li>
             </ul>
@@ -86,8 +87,8 @@
     <div class="container">
       <section id="about" class="about-section">
         <main class="about-main">
-          <h2 class="about-title">About me</h2>
           <div class="about-text">
+            <h2 class="about-title">About me</h2>
             <p class="about-text-description">
               Hi there and nice to meet you!
               <br />
@@ -108,6 +109,64 @@
           </div>
         </main>
       </section>
+
+      <section class="project-section" id="projects">
+        <div class="project-card">
+          <iframe width="300" height="195"
+          src="https://www.youtube.com/embed/10huXvO5t3E">
+        </iframe>
+          <div class="project-text">
+            <h3>World Rush</h4>
+            <p>World Rush is seminar work (student project), a 3D platformer game developed using Unity game engine combined with C#. 
+              The game was made within a month. We faced many challenges like AI movements for enemies, animations, modeling.. Check out the gameplay :D !
+            </p>
+            <span style="color: red;">GitHub: </span>
+          <a class="link" href="https://github.com/atifdelibasic/Friendly-ASP.NET-Core-MVC">Source code</a>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <iframe width="300" height="195"
+          src="https://www.youtube.com/embed/euggGLySrgc">
+        </iframe>
+        <div class="project-text">
+          <h3>Friendly Social Network</h4>
+          <p>
+            This web app is based on social network idea that we named Friendly. Main goal is making everyday obligations easier by using users locations.
+            If users share the same interests or same hobbies and are in few kilometers radius (10km), they will be able to see each others posts. UI was made 
+            using razor pages. Some of the packages and libaries that were used: Identity, SignalR, SendGrid, ZipCodeAPI, Bootstrap, jQuery..
+          </p>
+          <span style="color: red;">Live:</span>
+          <a class="link" href="https://p2029.app.fit.ba/">https://p2029.app.fit.ba/</a>
+
+          <br>
+          <span style="color: red;">GitHub: </span>
+          <a class="link" href="https://github.com/atifdelibasic/Friendly-ASP.NET-Core-MVC">Source code</a>
+        </div>
+        </div>
+
+        <div class="project-card">
+          <img src="./images/htmlcsjs.png" style="width: 300px; height: 195px;" class="project-img">
+
+        <div class="project-text">
+          <h3>Mini projects</h4>
+          <p>
+            Projects made using Vanilla JavaScript one year ago while I was sharpening my JS skills. Some of them are quite
+            interesting. They are live, check them out!
+          </p>
+          <span style="color: red;">Live:</span>
+          <a class="link" href="https://typefast-six.vercel.app/">Type Fast</a>,
+          <a class="link" href="https://trivia-quiz-snowy.vercel.app/">Quiz</a>,
+          <a class="link" href="https://guess-number-seven.vercel.app/">Number Guesser</a>,
+          <a class="link" href="https://optimistic-meitner-945dee.netlify.app/todolist/">ToDoList</a>,
+          <a class="link" href="https://optimistic-meitner-945dee.netlify.app/rockpaperscissors/">RockPaperScissors</a>
+          <br>
+          <span style="color: red;">GitHub: </span>
+          <a class="link" href="https://github.com/atifdelibasic/Projects_HTML_CSS_JS.git">Source code</a>
+        </div>
+        </div>
+      </section>
+
 
       <section id="skills" class="skills-section">
         <div class="cards">
