--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
           </p>
           <span style="color: red;">Live:</span>
           <a class="link" href="https://p2029.app.fit.ba/">https://p2029.app.fit.ba/</a>
+          <br>
+          <span style="color: red;">Angular part:</span>
+          <a class="link" href="https://api.p2029.app.fit.ba/">https://api.p2029.app.fit.ba/</a>
 
           <br>
           <span style="color: red;">GitHub: </span>
@@ -174,7 +177,7 @@
             <img src="./icons/computer.png" alt="" />
             <h3 class="card-title">Front-end</h3>
             <p class="card-description">
-              Good knowledge of HTML and CSS. Focusing on learning React.js
+              Good knowledge of HTML and CSS. Focusing on learning Angular
             </p>
             <p class="card-subtitle">Tools:</p>
             <p class="card-tools">Visual Studio Code</p>
@@ -185,6 +188,7 @@
               <li class="skill-item">JavaScript</li>
               <li class="skill-item">Bootstrap</li>
               <li class="skill-item">React.js</li>
+              <li class="skill-item">Angular</li>
             </ul>
           </div>
 
